--- a/index.html
+++ b/index.html
@@ -602,43 +602,6 @@ body {
     margin-bottom: 0;
     padding-top: 4px;         /* 3*1.333 */
 }
-  .dynamic-zoom {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      flex-direction: row;
-      gap: 10px;
-      opacity: 0;
-      transition: opacity 0.3s;
-      pointer-events: none;
-      z-index: 1000;
-    }
-
-    .dynamic-zoom.show {
-      opacity: 1;
-      pointer-events: auto;
-    }
-
-.dynamic-zoom button {
-  width: 30px;
-  height: 30px;
-  background: white;
-  border: none;
-  cursor: pointer;
-  font-size: 20px; /* уменьшен размер шрифта */
-  padding: 0;
-  margin: 0;
-  line-height: 30px;
-  text-align: center;
-  border-radius: 0;
-  box-shadow: none;
-
-  color: black;
-  -webkit-appearance: none;
-  -webkit-tap-highlight-color: transparent;
-}
 
     </style>
 </head>
@@ -724,96 +687,38 @@ body {
         <button class="modal-button" id="targetSubmit"><i class="fas fa-check"></i> Подтвердить</button>
         <button class="modal-button modal-close" id="targetClose"><i class="fas fa-times"></i> Закрыть</button>
     </div>
-          <div class="dynamic-zoom" id="zoom-buttons">
-    <button id="zoom-out">-</button>
-    <button id="zoom-in">+</button>
-  </div>
     <div id="alert-container">
-        <div id="alert-menu">
-            <h3>Дать тревогу</h3>
-            <div>
-                <input type="checkbox" id="Сумская область"><label for="Сумская область">Сумская область</label>
-            </div>
-            <div>
-                <input type="checkbox" id="г.Киев"><label for="г.Киев">г.Киев</label>
-            </div>
-            <div>
-                <input type="checkbox" id="Харьковская область"><label for="Харьковская область">Харьковская область</label>
-            </div>
-            <div>
-                <input type="checkbox" id="Черниговская область"><label for="Черниговская область">Черниговская область</label>
-            </div>
-            <div>
-                <input type="checkbox" id="Полтавская область"><label for="Полтавская область">Полтавская область</label>
-            </div>
-            <div>
-                <input type="checkbox" id="Днепропетровская область"><label for="Днепропетровская область">Днепропетровская область</label>
-            </div>
-            <div>
-                <input type="checkbox" id="Киевская область"><label for="Киевская область">Киевская область</label>
-            </div>
-<div>
-            <input type="checkbox" id="Житомирская область"><label for="Житомирская область">Житомирская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Черкасская область"><label for="Черкасская область">Черкасская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Луганская область"><label for="Луганская область">Луганская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Донецкая область"><label for="Донецкая область">Донецкая область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Кировоградская область"><label for="Кировоградская область">Кировоградская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Винницкая область"><label for="Винницкая область">Винницкая область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Черновицкая область"><label for="Черновицкая область">Черновицкая область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Херсонская область"><label for="Херсонская область">Херсонская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="АР Крым"><label for="АР Крым">АР Крым</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Одесская область"><label for="Одесская область">Одесская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Николаевская область"><label for="Николаевская область">Николаевская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Хмельницкая область"><label for="Хмельницкая область">Хмельницкая область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Ровненская область"><label for="Ровненская область">Ровненская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Тернопольская область"><label for="Тернопольская область">Тернопольская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Ивано-Франковская область"><label for="Ивано-Франковская область">Ивано-Франковская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Закарпатская область"><label for="Закарпатская область">Закарпатская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Волынская область"><label for="Волынская область">Волынская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Львовская область"><label for="Львовская область">Львовская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="Запорожская область"><label for="Запорожская область">Запорожская область</label>
-        </div>
-        <div>
-            <input type="checkbox" id="По всей территории"><label for="По всей территории">По всей территории</label>
-        </div>
-
-    </div>
+  <div id="alert-menu">
+    <h3>Дать тревогу</h3>
+    <div><input type="checkbox" id="Сумська область"><label for="Сумська область">Сумская область</label></div>
+    <div><input type="checkbox" id="г.Київ"><label for="г.Київ">г.Киев</label></div>
+    <div><input type="checkbox" id="Харківська область"><label for="Харківська область">Харьковская область</label></div>
+    <div><input type="checkbox" id="Чернігівська область"><label for="Чернігівська область">Черниговская область</label></div>
+    <div><input type="checkbox" id="Полтавська область"><label for="Полтавська область">Полтавская область</label></div>
+    <div><input type="checkbox" id="Дніпропетровська область"><label for="Дніпропетровська область">Днепропетровская область</label></div>
+    <div><input type="checkbox" id="Київська область"><label for="Київська область">Киевская область</label></div>
+    <div><input type="checkbox" id="Житомирська область"><label for="Житомирська область">Житомирская область</label></div>
+    <div><input type="checkbox" id="Черкаська область"><label for="Черкаська область">Черкасская область</label></div>
+    <div><input type="checkbox" id="Луганська область"><label for="Луганська область">Луганская область</label></div>
+    <div><input type="checkbox" id="Донецька область"><label for="Донецька область">Донецкая область</label></div>
+    <div><input type="checkbox" id="Кіровоградська область"><label for="Кіровоградська область">Кировоградская область</label></div>
+    <div><input type="checkbox" id="Вінницька область"><label for="Вінницька область">Винницкая область</label></div>
+    <div><input type="checkbox" id="Чернівецька область"><label for="Чернівецька область">Черновицкая область</label></div>
+    <div><input type="checkbox" id="Херсонська область"><label for="Херсонська область">Херсонская область</label></div>
+    <div><input type="checkbox" id="АР Крим"><label for="АР Крим">АР Крым</label></div>
+    <div><input type="checkbox" id="Одеська область"><label for="Одеська область">Одесская область</label></div>
+    <div><input type="checkbox" id="Миколаївська область"><label for="Миколаївська область">Николаевская область</label></div>
+    <div><input type="checkbox" id="Хмельницька область"><label for="Хмельницька область">Хмельницкая область</label></div>
+    <div><input type="checkbox" id="Рівненська область"><label for="Рівненська область">Ровненская область</label></div>
+    <div><input type="checkbox" id="Тернопільська область"><label for="Тернопільська область">Тернопольская область</label></div>
+    <div><input type="checkbox" id="Івано-Франківська область"><label for="Івано-Франківська область">Ивано-Франковская область</label></div>
+    <div><input type="checkbox" id="Закарпатська область"><label for="Закарпатська область">Закарпатская область</label></div>
+    <div><input type="checkbox" id="Волинська область"><label for="Волинська область">Волынская область</label></div>
+    <div><input type="checkbox" id="Львівська область"><label for="Львівська область">Львовская область</label></div>
+    <div><input type="checkbox" id="Запорізька область"><label for="Запорізька область">Запорожская область</label></div>
+    <div><input type="checkbox" id="По всей территории"><label for="По всей территории">По всей территории</label></div>
+  </div>
+</div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-measure/3.1.0/leaflet-measure.js"></script>
     <script src="https://unpkg.com/leaflet-geosearch/dist/bundle.min.js"></script>
@@ -1834,57 +1739,153 @@ fetch("front.json")
   })
   .catch(error => console.error("Ошибка загрузки JSON:", error));
 
-  let polygons = {};
+  let polygons = {}; // активные районы
+let activeDistricts = {}; // какие районы включены
 let menuVisible = false;
 
-fetch('trevoga.json')
-    .then(response => response.json())
-    .then(geojsonData => {
-        let regions = {};
-        geojsonData.features.forEach(feature => {
-            let name = feature.properties.name;
-            regions[name] = feature;
-        });
-
-        // Автоматически активируем "Луганская область" и "А. Р Крым"
-        const autoActivateRegions = ["Луганская область"];
-        
-        document.querySelectorAll('#alert-menu input[type=checkbox]').forEach(checkbox => {
-            checkbox.onchange = function() {
-                let region = checkbox.id;
-                if (checkbox.checked && regions[region]) {
-                    let layer = L.geoJSON(regions[region], {
-                        style: { color: 'red', fillColor: 'red', fillOpacity: 0.13, weight: 0.3 }
-                    }).addTo(map);
-                    polygons[region] = layer;
-                } else if (polygons[region]) {
-                    map.removeLayer(polygons[region]);
-                    delete polygons[region];
-                }
-            };
-
-            // Автоматически ставим галочку для нужных регионов и активируем их
-            if (autoActivateRegions.includes(checkbox.id)) {
-                checkbox.checked = true;
-                checkbox.onchange();  // Вызываем onchange вручную для активированного региона
-            }
-        });
-
-        // Обработчик для чекбокса "По всей территории"
-        document.getElementById('По всей территории').onchange = function() {
-            let isChecked = this.checked;
-            document.querySelectorAll('#alert-menu input[type=checkbox]').forEach(checkbox => {
-                if (checkbox.id !== 'По всей территории') {
-                    checkbox.checked = isChecked;
-                    checkbox.onchange();  // Активируем или деактивируем регионы в зависимости от состояния
-                }
-            });
-        };
+fetch('districts.geojson')
+  .then(response => response.json())
+  .then(geojsonData => {
+    const districtsByRegion = {};
+    geojsonData.features.forEach(feature => {
+      const region = feature.properties.ADMIN_1;
+      if (!districtsByRegion[region]) districtsByRegion[region] = [];
+      districtsByRegion[region].push(feature);
     });
+// === ВСЕГДА подсвечиваем ЛУГАНСКУЮ ОБЛАСТЬ через trevoga.json ===
+fetch('trevoga.json')
+  .then(r => r.json())
+  .then(trevogaData => {
 
+    trevogaData.features.forEach(feature => {
+
+      // Ищем "Луганская область" в любых свойствах
+      const props = feature.properties;
+      const isLugansk = Object.values(props).some(v => 
+        typeof v === 'string' && v.trim().toLowerCase() === 'луганская область'
+      );
+
+      if (isLugansk) {
+
+        const layer = L.geoJSON(feature, {
+          style: {
+            color: 'red',
+            fillColor: 'red',
+            fillOpacity: 0.13,
+            weight: 0.3
+          }
+        }).addTo(map);
+
+        const districtName =
+          props.ADMIN_2 ||
+          props.name ||
+          props.region ||
+          'Луганская область';
+
+        polygons[districtName] = layer;
+        activeDistricts[districtName] = true;
+      }
+    });
+  });
+
+
+    document.querySelectorAll('#alert-menu input[type=checkbox]').forEach(checkbox => {
+      const region = checkbox.id;
+
+      checkbox.addEventListener('click', async function (e) {
+        e.preventDefault(); // блокируем установку галочки
+
+        // ======== ОТДЕЛЬНО ОБРАБАТЫВАЕМ г.Київ ========
+        if (region === 'г.Київ') {
+          if (polygons['Kyiv']) {
+            // если уже включён — выключаем
+            map.removeLayer(polygons['Kyiv']);
+            delete polygons['Kyiv'];
+            checkbox.checked = false;
+            return;
+          }
+
+          // загружаем Kyiv.json
+          const kyivData = await fetch('Kyiv.json').then(r => r.json());
+          const kyivLayer = L.geoJSON(kyivData, {
+            style: {
+  color: 'red',
+  fillColor: 'red',
+  fillOpacity: 0.13,
+  weight: 0.3
+}
+
+          }).addTo(map);
+
+          polygons['Kyiv'] = kyivLayer;
+          checkbox.checked = true;
+          return; // не открываем список
+        }
+        // ==============================================
+
+        const existingList = checkbox.parentElement.querySelector('.district-list');
+        if (existingList) {
+          existingList.remove();
+          return;
+        }
+
+        if (districtsByRegion[region]) {
+          const subList = document.createElement('div');
+          subList.className = 'district-list';
+          subList.style.marginLeft = '20px';
+          subList.style.marginTop = '5px';
+
+          districtsByRegion[region].forEach(feature => {
+            const districtName = feature.properties.ADMIN_2;
+
+            const div = document.createElement('div');
+            div.innerHTML = `
+              <input type="checkbox" id="${districtName}" data-region="${region}">
+              <label for="${districtName}">${districtName}</label>
+            `;
+            subList.appendChild(div);
+
+            const districtCheckbox = div.querySelector('input');
+
+            if (activeDistricts[districtName]) {
+              districtCheckbox.checked = true;
+            }
+
+            districtCheckbox.onchange = function() {
+              const featureData = districtsByRegion[region].find(f => f.properties.ADMIN_2 === districtName);
+
+              if (districtCheckbox.checked) {
+                const layer = L.geoJSON(featureData, {
+                  style: {
+                    color: 'red',
+                    fillColor: 'red',
+                    fillOpacity: 0.13,
+                    weight: 0.15
+                  }
+                }).addTo(map);
+
+                polygons[districtName] = layer;
+                activeDistricts[districtName] = true;
+              } else {
+                if (polygons[districtName]) {
+                  map.removeLayer(polygons[districtName]);
+                  delete polygons[districtName];
+                }
+                delete activeDistricts[districtName];
+              }
+            };
+          });
+
+          checkbox.parentElement.appendChild(subList);
+        }
+      });
+    });
+  });
+
+// кнопка "Дать тревогу"
 document.getElementById('alert-button').onclick = function() {
-    menuVisible = !menuVisible;
-    document.getElementById('alert-menu').style.display = menuVisible ? 'block' : 'none';
+  menuVisible = !menuVisible;
+  document.getElementById('alert-menu').style.display = menuVisible ? 'block' : 'none';
 };
         function getKievTime() {
     const options = {
@@ -1935,33 +1936,8 @@ function getNextLitakId() {
      // Загрузка GeoJSON файла
     // Загружаем ОККУПИРОВАННЫЕ территории
     // Загружаем ЛИНИЮ фронта
-    fetch('line.json')
-      .then(res => res.json())
-      .then(data => {
-        L.geoJSON(data, {
-          style: {
-            color: 'red',
-            weight: 1,
-            fill: false
-          }
-        }).addTo(map);
-      })
-    const zoomButtons = document.getElementById('zoom-buttons');
-    let hideTimeout;
 
-    function showZoomButtons() {
-      zoomButtons.classList.add('show');
-      if (hideTimeout) clearTimeout(hideTimeout);
-      hideTimeout = setTimeout(() => {
-        zoomButtons.classList.remove('show');
-      }, 3000);
-    }
 
-    map.on('movestart', showZoomButtons);
-    map.on('move', showZoomButtons);
-
-    document.getElementById('zoom-in').onclick = () => map.zoomIn();
-    document.getElementById('zoom-out').onclick = () => map.zoomOut();
     </script>
 </body>
 </html>
