--- a/index.html
+++ b/index.html
@@ -602,6 +602,43 @@ body {
     margin-bottom: 0;
     padding-top: 4px;         /* 3*1.333 */
 }
+  .dynamic-zoom {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      opacity: 0;
+      transition: opacity 0.3s;
+      pointer-events: none;
+      z-index: 1000;
+    }
+
+    .dynamic-zoom.show {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+.dynamic-zoom button {
+  width: 30px;
+  height: 30px;
+  background: white;
+  border: none;
+  cursor: pointer;
+  font-size: 20px; /* уменьшен размер шрифта */
+  padding: 0;
+  margin: 0;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 0;
+  box-shadow: none;
+
+  color: black;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+}
 
     </style>
 </head>
@@ -687,8 +724,12 @@ body {
         <button class="modal-button" id="targetSubmit"><i class="fas fa-check"></i> Подтвердить</button>
         <button class="modal-button modal-close" id="targetClose"><i class="fas fa-times"></i> Закрыть</button>
     </div>
+          <div class="dynamic-zoom" id="zoom-buttons">
+    <button id="zoom-out">-</button>
+    <button id="zoom-in">+</button>
+  </div>
     <div id="alert-container">
-  <div id="alert-menu">
+<div id="alert-menu">
     <h3>Дать тревогу</h3>
     <div><input type="checkbox" id="Сумська область"><label for="Сумська область">Сумская область</label></div>
     <div><input type="checkbox" id="г.Київ"><label for="г.Київ">г.Киев</label></div>
@@ -719,6 +760,7 @@ body {
     <div><input type="checkbox" id="По всей территории"><label for="По всей территории">По всей территории</label></div>
   </div>
 </div>
+
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-measure/3.1.0/leaflet-measure.js"></script>
     <script src="https://unpkg.com/leaflet-geosearch/dist/bundle.min.js"></script>
@@ -1196,7 +1238,12 @@ updateOverlayFilter();
       <img src="${iconUrl}" class="icon" />
     </div>
   `;
-Ы
+              icon = L.divIcon({
+        className: 'icon',
+        html: iconHtml,
+        iconSize: [24, 24], // общий размер
+        iconAnchor: [12, 12],
+    });
 } else if (iconClass === 'kr') {
       iconUrl = 'kalibr.png';
       iconClass = 'red-id';
@@ -1224,8 +1271,8 @@ updateOverlayFilter();
               icon = L.divIcon({
         className: 'icon',
         html: iconHtml,
-        iconSize: [6.5, 6.5], // общий размер
-        iconAnchor: [10, 10],
+        iconSize: [24, 24], // общий размер
+        iconAnchor: [12, 12],
     });
 } else if (iconClass === 'blue-id') {
   const objectId2 = getNextObjectIdBlue();
@@ -1239,8 +1286,8 @@ updateOverlayFilter();
           icon = L.divIcon({
         className: 'icon',
         html: iconHtml,
-        iconSize: [6.5, 6.5], // общий размер
-        iconAnchor: [10, 10],
+        iconSize: [24, 24], // общий размер
+        iconAnchor: [12, 12],
     });
 } else {
     const iconTypes = {
@@ -1266,8 +1313,8 @@ const randomNumber = Math.floor(Math.random() * 200) + 1;
         icon = L.divIcon({
         className: 'icon',
         html: iconHtml,
-        iconSize: [6.5, 6.5], // общий размер
-        iconAnchor: [10, 10],
+        iconSize: [24, 24], // общий размер
+        iconAnchor: [12, 12],
     });
 }
 }
@@ -1342,75 +1389,55 @@ let lastTimestamp = null;
 
 /// ==== Переменные для следа ====
 let showTrail = false;
-let trailCoords = [[currentLat, currentLng]]; // массив координат всего пути
+let trailCoords = [[currentLat, currentLng]];
 
 let trailLine = null;
 let startMarker = null;
 let trailDecorator = null;
 
-// ==== Функция определения цвета линии для DivIcon ====
+// ==== Цвет линии ====
 function getLineColor(marker) {
-    if (!marker || !marker.options || !marker.options.icon) return '#F70300'; // дефолт красный
+    if (!marker || !marker.options || !marker.options.icon) return '#F70300';
     const html = marker.options.icon.options.html || '';
-  
-    if (html.includes('shahed')) return '#FDCF00';    // жёлтый
-    if (html.includes('neyst tip')) return '#006aff'; // синий
-
-    return '#F70300'; // дефолт красный
+    if (html.includes('shahed')) return '#FDCF00';
+    if (html.includes('neyst tip')) return '#006aff';
+    return '#F70300';
 }
-
 
 // ==== Создание линии и стрелок ====
 function createTrail(marker) {
     const lineColor = getLineColor(marker);
-
-    trailLine = L.polyline(trailCoords, {
-        color: lineColor,
-        weight: 0.7,
-        opacity: 1
-    }).addTo(map);
-
-    // фиксируем стартовую точку (первая в маршруте)
+    trailLine = L.polyline(trailCoords, { color: lineColor, weight: 0.7, opacity: 1 }).addTo(map);
     startMarker = L.circleMarker(trailCoords[0], {
-        radius: 0.2,
-        color: lineColor,
-        fillColor: lineColor,
-        fillOpacity: 1
+        radius: 0.2, color: lineColor, fillColor: lineColor, fillOpacity: 1
     }).addTo(map);
-
     updateDecorator(lineColor);
 }
 
 // ==== Декоратор стрелок ====
 function updateDecorator(lineColor) {
     if (trailDecorator) map.removeLayer(trailDecorator);
-
     trailDecorator = L.polylineDecorator(trailLine, {
-        patterns: [
-            {
-                offset: '100%',
-                repeat: 0,
-                symbol: L.Symbol.arrowHead({
-                    pixelSize: 4,
-                    polygon: true,
-                    pathOptions: { color: lineColor, fillOpacity: 1 }
-                })
-            }
-        ]
+        patterns: [{
+            offset: '100%',
+            repeat: 0,
+            symbol: L.Symbol.arrowHead({
+                pixelSize: 4,
+                polygon: true,
+                pathOptions: { color: lineColor, fillOpacity: 1 }
+            })
+        }]
     }).addTo(map);
 }
 
-// ==== Кнопка включения/выключения следа ====
+// ==== Кнопка включения следа ====
 function initTrailButton(marker) {
     const btn = document.getElementById("left-arrow-button");
     if (!btn) return console.warn("Кнопка #left-arrow-button не найдена!");
-
     btn.addEventListener("click", () => {
         showTrail = !showTrail;
-
-        if (showTrail) {
-            createTrail(marker); // отрисуем весь накопленный путь
-        } else {
+        if (showTrail) createTrail(marker);
+        else {
             if (trailLine) { map.removeLayer(trailLine); trailLine = null; }
             if (startMarker) { map.removeLayer(startMarker); startMarker = null; }
             if (trailDecorator) { map.removeLayer(trailDecorator); trailDecorator = null; }
@@ -1418,58 +1445,213 @@ function initTrailButton(marker) {
     });
 }
 
-// ==== Инициализация ====
 if (document.readyState === "loading") {
     document.addEventListener("DOMContentLoaded", () => initTrailButton(marker));
 } else {
     initTrailButton(marker);
 }
 
+// ==== Верхнее меню ====
+function createTopMenu(marker) {
+    if (typeof deleteMode !== 'undefined' && deleteMode) return;
+    if (document.getElementById('top-menu-' + objectId)) return;
 
-// ==== Popup для маркера ====
-const customPopupContent = `
-    <div class="custom-popup">
-        <p><strong>ЦЕЛЬ:</strong> ${objectType}</p>
-        <p><strong>СКОРОСТЬ:</strong> ${speed} км/ч</p>
-        <button id="changeCoordsBtn">Изменить координаты</button>
-    </div>
-`;
-marker.bindPopup(customPopupContent);
+    const menu = document.createElement('div');
+    menu.id = 'top-menu-' + objectId;
 
-marker.on('popupopen', () => {
-    setTimeout(() => {
-        const popupEl = marker.getPopup().getElement();
-        if (!popupEl) return;
-        const btn = popupEl.querySelector('#changeCoordsBtn');
-        if (!btn) return;
-        btn.onclick = () => {
-            openCoordsModal((coordsText) => {
-                if (!coordsText) return;
-                const coordsList = coordsText.split("\n").map(line => {
-                    const [lat, lng] = line.split(",").map(Number);
-                    return [lat, lng];
-                }).filter(c => !isNaN(c[0]) && !isNaN(c[1]));
-                if (coordsList.length > 0) {
-                    const currentPos = marker.getLatLng();
-                    currentLat = currentPos.lat;
-                    currentLng = currentPos.lng;
-                    waypoints = [[currentLat, currentLng], ...coordsList];
-                    currentWaypointIndex = 1;
-                    targetLatVar = waypoints[1][0];
-                    targetLngVar = waypoints[1][1];
-                    lastTimestamp = null;
-                    if (!isActive) {
-                        isActive = true;
-                        scheduleNextFrame(updatePosition);
-                    }
-                }
-            });
-        };
-    }, 0);
+  const existingMenus = document.querySelectorAll('[id^="top-menu-"]').length;
+// отступ для новой панели (уменьшил зазор)
+const offset = 15 + existingMenus * 30;
+
+Object.assign(menu.style, {
+    position: 'fixed',
+    top: offset + 'px',
+    left: '0',
+    width: '100%',
+    height: '30px',
+    background: 'rgba(0, 0, 0, 0.4)',
+    color: '#fff',
+    fontFamily: 'Consolas, monospace',
+    fontSize: '13px',
+    zIndex: '9999',
+    borderBottom: '1px solid rgba(255,255,255,0.15)',
+    display: 'flex',
+    alignItems: 'center',
+    justifyContent: 'space-between',
+    padding: '0 8px',
+    boxShadow: 'none',
+    transition: 'none'
 });
 
-marker.on('click', () => marker.openPopup());
+// === Текст ===
+const row = document.createElement('div');
+Object.assign(row.style, {
+    display: 'grid',
+    gridTemplateColumns: 'repeat(6, 1fr)',
+    alignItems: 'center',
+    width: 'calc(100% - 120px)',
+    textAlign: 'center',
+    letterSpacing: '0.3px',
+    columnGap: '12px',
+    paddingRight: '120px'
+});
 
+row.innerHTML = `
+    <div>${objectId}р</div>
+    <div>A0</div>
+    <div>D0</div>
+    <div>H0.0</div>
+    <div>V${speed}</div>
+    <div>1</div>
+`;
+
+// === Кнопки ===
+const icons = document.createElement('div');
+Object.assign(icons.style, {
+    position: 'absolute',
+    right: '8px',
+    display: 'flex',
+    gap: '12px'
+});
+
+icons.innerHTML = `
+    <button id="changeCoordsBtn-${objectId}" title="Изменить маршрут" style="
+        width:22px;height:22px;
+        border:1px solid rgba(255,255,255,0.25);
+        background:rgb(101, 101, 101);;
+        border-radius:2px;
+        cursor:pointer;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        padding:0;
+    ">
+        <img src="reload.png" alt="reload" style="width:14px;height:14px;">
+    </button>
+
+    <button id="zelenySamBtn-${objectId}" title="Самолёт" style="
+        width:22px;height:22px;
+        border:1px solid rgba(255,255,255,0.25);
+        background:rgb(101, 101, 101);;
+        border-radius:2px;
+        cursor:default;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        padding:0;
+    ">
+        <img src="zelenysam.png" alt="plane" style="width:15px;height:15px;">
+    </button>
+
+    <button id="closeTopMenu-${objectId}" title="Закрыть" style="
+        width:22px;height:22px;
+        border:1px solid rgba(255,255,255,0.25);
+        background:rgb(101, 101, 101);
+        border-radius:2px;
+        cursor:pointer;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        padding:0;
+        font-size:12px;
+        color:#222;
+    ">
+        <i class="fas fa-trash-alt"></i>
+    </button>
+`;
+
+
+
+    menu.appendChild(row);
+    menu.appendChild(icons);
+    document.body.appendChild(menu);
+
+    // обновлено — линия теперь исчезает при закрытии меню
+    document.getElementById(`closeTopMenu-${objectId}`).onclick = () => {
+        menu.remove();
+    // если есть линия направления — удалить
+    if (headingLine) {
+        map.removeLayer(headingLine);
+        headingLine = null;
+    }
+
+    // 🔥 если иконка была изменена — вернуть исходную
+    if (marker.isExpanded) {
+        marker.setIcon(L.divIcon({
+            className: 'icon',
+            html: iconHtml,
+            iconSize: [28.8, 28.8],
+            iconAnchor: [14.4, 14.4],
+        }));
+        marker.isExpanded = false;
+    }
+
+    // обновить позиции остальных меню
+    const allMenus = document.querySelectorAll('[id^="top-menu-"]');
+    allMenus.forEach((m, i) => {
+        m.style.top = 15 + i * 30 + 'px';
+    });
+};
+
+    document.getElementById(`changeCoordsBtn-${objectId}`).onclick = () => {
+        openCoordsModal((coordsText) => {
+            if (!coordsText) return;
+            const coordsList = coordsText
+                .split("\n")
+                .map(line => line.split(",").map(Number))
+                .filter(c => !isNaN(c[0]) && !isNaN(c[1]));
+            if (coordsList.length > 0) {
+                const pos = marker.getLatLng();
+                currentLat = pos.lat;
+                currentLng = pos.lng;
+                waypoints = [[currentLat, currentLng], ...coordsList];
+                currentWaypointIndex = 1;
+                targetLatVar = waypoints[1][0];
+                targetLngVar = waypoints[1][1];
+                lastTimestamp = null;
+                if (!isActive) {
+                    isActive = true;
+                    scheduleNextFrame(updatePosition);
+                }
+            }
+        });
+    };
+}
+
+// ==== Клик по маркеру ====
+// Добавляем функционал линии направления
+let headingLine = null;
+marker.on('click', () => {
+    createTopMenu(marker);
+
+    if (headingLine) {
+        map.removeLayer(headingLine);
+        headingLine = null;
+        return;
+    }
+
+    headingLine = L.polyline([], {
+        color: '#999999', // серая
+        weight: 0.8,      // тоньше
+        opacity: 0.9
+    }).addTo(map);
+});
+
+// ==== Функция обновления линии направления ====
+function updateHeadingLine(angleDeg) {
+    if (!headingLine) return;
+    const pos = marker.getLatLng();
+    const angleRad = angleDeg * Math.PI / 180;
+    const lengthMeters = 2000000; // 1000 км
+    const R = 6371000;
+
+    const lat2 = pos.lat + (lengthMeters / R) * (180 / Math.PI) * Math.cos(angleRad);
+    const lng2 = pos.lng + (lengthMeters / R) * (180 / Math.PI) * Math.sin(angleRad) / Math.cos(pos.lat * Math.PI / 180);
+
+    headingLine.setLatLngs([[pos.lat, pos.lng], [lat2, lng2]]);
+}
+
+// ==== Вращение и движение ====
 function rotateIcon(lat1, lng1, lat2, lng2, speed) {
     if (speed === 0) {
         marker._icon.querySelector('.icon').style.transform = `rotate(0deg)`;
@@ -1478,11 +1660,11 @@ function rotateIcon(lat1, lng1, lat2, lng2, speed) {
     const course = calculateCourse(lat1, lng1, lat2, lng2) * (180 / Math.PI);
     const angle = (course + 360) % 360;
     marker._icon.querySelector('.icon').style.transform = `rotate(${angle}deg)`;
+    updateHeadingLine(angle);
 }
 
 markers.push(marker);
 
-// ==== Стабильное обновление позиции ====
 function scheduleNextFrame(callback) {
     if (document.hasFocus()) requestAnimationFrame(callback);
     else setTimeout(() => { if (isActive) callback(performance.now()); }, 1000);
@@ -1510,6 +1692,7 @@ function updatePosition(timestamp) {
         } else {
             isActive = false;
             marker.remove();
+            if (headingLine) map.removeLayer(headingLine);
         }
     } else {
         currentLat = newLat;
@@ -1519,10 +1702,7 @@ function updatePosition(timestamp) {
         scheduleNextFrame(updatePosition);
     }
 
-    // ==== Всегда сохраняем путь ====
     trailCoords.push([currentLat, currentLng]);
-
-    // ==== Отображаем только если включено ====
     if (showTrail && trailLine) {
         trailLine.setLatLngs(trailCoords);
         updateDecorator();
@@ -1535,15 +1715,15 @@ currentWaypointIndex = 0;
 lastTimestamp = null;
 scheduleNextFrame(updatePosition);
 
-// ==== Вспомогательные функции ====
+// ==== Вспомогательные ====
 function haversine(lat1, lon1, lat2, lon2) {
     const R = 6371000;
     const toRad = x => x * Math.PI / 180;
     const dLat = toRad(lat2 - lat1);
     const dLon = toRad(lon2 - lon1);
-    const a = Math.sin(dLat/2) ** 2 +
-              Math.cos(toRad(lat1)) * Math.cos(toRad(lat2)) *
-              Math.sin(dLon/2) ** 2;
+    const a = Math.sin(dLat/2)**2 +
+        Math.cos(toRad(lat1)) * Math.cos(toRad(lat2)) *
+        Math.sin(dLon/2)**2;
     return 2 * R * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
 }
 
@@ -1567,7 +1747,7 @@ function calculateNewPosition(lat1, lon1, speedMps, deltaTime, lat2, lon2) {
     ];
 }
 
-// ==== Модальное окно ====
+// ==== Модалка координат ====
 function openCoordsModal(callback) {
     const background = document.createElement('div');
     background.className = 'modal-background show';
@@ -1577,18 +1757,18 @@ function openCoordsModal(callback) {
     box.className = 'modal show coords-modal-top-left';
     box.innerHTML = `
         <h2>Выберите точки маршрута</h2>
-        <textarea id="coordsInput" placeholder="Кликай колёсиком по карте" style="width:100%; height:80px; font-size:7px; background:#1e232c; color:#fff; border:1px solid #3a4152; border-radius:4px; padding:3px;"></textarea>
+        <textarea id="coordsInput" placeholder="Кликай колёсиком по карте"
+            style="width:100%;height:80px;font-size:7px;background:#1e232c;color:#fff;
+            border:1px solid #3a4152;border-radius:4px;padding:3px;"></textarea>
         <button id="coordsOk" class="modal-button">OK</button>
         <button id="coordsCancel" class="modal-button">Отмена</button>
     `;
     document.body.appendChild(box);
-
     box.style.top = '20px';
     box.style.left = '20px';
     box.style.transform = 'none';
 
-    let isDragging = false;
-    let offsetX, offsetY;
+    let isDragging = false, offsetX, offsetY;
     box.onmousedown = (e) => {
         if (e.target.tagName === "TEXTAREA" || e.target.tagName === "BUTTON") return;
         isDragging = true;
@@ -1639,6 +1819,8 @@ function openCoordsModal(callback) {
         callback(null);
     };
 }
+
+
 
 // ==== Удаление маркера без удаления линии ====
 marker.on('click', function () {
@@ -1738,6 +1920,7 @@ fetch("front.json")
     }).addTo(map);
   })
   .catch(error => console.error("Ошибка загрузки JSON:", error));
+
 
   let polygons = {}; // активные районы
 let activeDistricts = {}; // какие районы включены
@@ -1887,6 +2070,7 @@ document.getElementById('alert-button').onclick = function() {
   menuVisible = !menuVisible;
   document.getElementById('alert-menu').style.display = menuVisible ? 'block' : 'none';
 };
+
         function getKievTime() {
     const options = {
         timeZone: 'Europe/Kiev',
@@ -1935,9 +2119,22 @@ function getNextLitakId() {
     updateAlertCount();
      // Загрузка GeoJSON файла
     // Загружаем ОККУПИРОВАННЫЕ территории
-    // Загружаем ЛИНИЮ фронта
+    const zoomButtons = document.getElementById('zoom-buttons');
+    let hideTimeout;
 
+    function showZoomButtons() {
+      zoomButtons.classList.add('show');
+      if (hideTimeout) clearTimeout(hideTimeout);
+      hideTimeout = setTimeout(() => {
+        zoomButtons.classList.remove('show');
+      }, 3000);
+    }
 
+    map.on('movestart', showZoomButtons);
+    map.on('move', showZoomButtons);
+
+    document.getElementById('zoom-in').onclick = () => map.zoomIn();
+    document.getElementById('zoom-out').onclick = () => map.zoomOut();
     </script>
 </body>
 </html>
