--- a/index.html
+++ b/index.html
@@ -765,7 +765,9 @@ body {
         }
     });
         const map = L.map('map', {
-            zoomControl: false
+            zoomControl: false,
+            zoomSnap: 0.33,
+    zoomDelta: 0.33,
         }).setView([48.3794, 31.1656], 6);
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
